<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin"
                android:src="@drawable/ic_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/app_title"
                android:textAppearance="@style/LightTextViewTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageLogo" />

            <TextView
                android:id="@+id/login_now"
                android:layout_width="@dimen/textview_width"
                android:layout_height="@dimen/textview_height"
                android:layout_marginTop="@dimen/regular_margin"
                android:gravity="center"
                android:text="@string/description_register"
                android:textAppearance="@style/TextViewSmallGrayColorText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitle" />

            <include
                android:id="@+id/inputFullName"
                layout="@layout/layout_edittext"
                app:title="@{@string/full_name}"
                app:inputHint="@{@string/full_name_hint}"
                android:layout_marginStart="@dimen/regular_margin"
                app:layout_constraintTop_toBottomOf="@id/login_now"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="@dimen/regular_margin"/>

            <!--            <TextView-->
            <!--                android:id="@+id/tvFullName"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:text="@string/full_name"-->
            <!--                style="@style/TextViewMediumLightGrayText"-->
            <!--                app:layout_constraintBottom_toTopOf="@id/etFullName"-->
            <!--                app:layout_constraintStart_toStartOf="@id/etFullName" />-->

            <!--            <EditText-->
            <!--                android:id="@+id/etFullName"-->
            <!--                style="@style/CustomEditText"-->
            <!--                android:layout_width="@dimen/button_width"-->
            <!--                android:layout_height="@dimen/button_height"-->
            <!--                android:layout_marginTop="@dimen/large_margin"-->
            <!--                android:hint="@string/full_name_hint"-->
            <!--                app:layout_constraintEnd_toEndOf="parent"-->
            <!--                app:layout_constraintStart_toStartOf="parent"-->
            <!--                app:layout_constraintTop_toBottomOf="@+id/login_now" />-->

            <TextView
                android:id="@+id/tvEmail"
                style="@style/TextViewMediumLightGrayText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                app:layout_constraintBottom_toTopOf="@id/etEmail"
                app:layout_constraintStart_toStartOf="@id/etEmail" />

            <EditText
                android:id="@+id/etEmail"
                style="@style/CustomEditText"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/large_margin"
                android:hint="@string/email_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputFullName" />

            <TextView
                android:id="@+id/tvPassword"
                style="@style/TextViewMediumLightGrayText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                app:layout_constraintBottom_toTopOf="@id/etPassword"
                app:layout_constraintStart_toStartOf="@id/etPassword" />


            <EditText
                android:id="@+id/etPassword"
                style="@style/PasswordEditText"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/large_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etEmail" />

            <TextView
                android:id="@+id/tvConfirmPassword"
                style="@style/TextViewMediumLightGrayText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password"
                app:layout_constraintBottom_toTopOf="@id/etConfirmPassword"
                app:layout_constraintStart_toStartOf="@id/etConfirmPassword" />


            <EditText
                android:id="@+id/etConfirmPassword"
                style="@style/PasswordEditText"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/large_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etPassword" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnRegister"
                style="@style/ButtonGradientLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/regular_margin"
                android:text="@string/register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etConfirmPassword" />

            <TextView
                android:id="@+id/tvNavigateToLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="@dimen/regular_margin"
                android:text="@string/register_navigate_to_login"
                android:textAppearance="@style/TextViewMediumGrayText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnRegister" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>
